tests/kulezi_tests/bad/multidim.lat
int main() {
    int[][] x = new int[2][5];
    for (int []y : x) {
        for (int z : y) {
            printInt(z);
        }
    }

    return 0;
}